tools/tests/errors/surf_cont_09.ki
# Bytes element above the 0..255 range
discard Bytes([1, 256, 3])
